--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 <section id="gallery" class="section">
   <h2>My Gallery</h2>
   <div class="gallery">
-    <img src="img/project1.png" alt="Project Screenshot">
-    <img src="img/project2.png" alt="Project Screenshot">
-    <img src="img/cert1.png" alt="Certificate">
-    <img src="img/cert2.png" alt="Certificate">
+    <img src="c.jpg" alt="Project Screenshot">
+    <img src="bb.jpg" alt="Project Screenshot">
+    <img src="r.jpg" alt="Certificate">
+    
   </div>
 </section>
 
@@ -121,9 +121,16 @@
     <section id="contact" class="section">
       <h2>Contact Me</h2>
       <p>
-        📧 Email: <a href="mailto:ahmed@example.com">ahmed@example.com</a> <br />
-        💼 GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a> <br />
-        📝 LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a>
+         📝 github<a href="https://github.com/060599896"
+        >
+
+        target="_blank">linkedin.com/in/your-profile</a>
+        <br/>
+        📧 Email: <a href="mailto:asdfzch3@gmail.com"
+target="_blank">gmail.com </a> <br />
+        📝 LinkedIn: <a href="https://www.linkedin.com/in/ahmed-tamer-715738310?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+
+        target="_blank">linkedin.com/in/your-profile</a>
       </p>
     </section>
   </div>
