--- a/index.html
+++ b/index.html
@@ -90,20 +90,13 @@
   <h2>Certificates</h2>
   <div class="cert-list">
     <div class="cert">
-      <h3>Intro to Cybersecurity – Cisco</h3>
-      <p>Completed a foundational course introducing cybersecurity principles, threats, and protection methods.</p>
-      <a href="https://www.netacad.com/certificate-link" target="_blank">View Certificate</a>
+      <h3>CS Basics - Route Academy</h3>
+
+      <p>Completed a basic computer science course covering core programming principles and logic building.
+      <a href="https://drive.google.com/drive/folders/10eB0MBlJ-1aK9qYNOGqPEK0LMbUI6sZP" target="_blank">View Certificate</a>
     </div>
-    <div class="cert">
-      <h3>HTML & CSS – freeCodeCamp</h3>
-      <p>Built responsive web pages and learned core web design concepts using modern HTML and CSS.</p>
-      <a href="https://www.freecodecamp.org/certificate-link" target="_blank">View Certificate</a>
-    </div>
-    <div class="cert">
-      <h3>Ethical Hacking Basics – TryHackMe</h3>
-      <p>Hands-on experience with Linux, networking, enumeration, and beginner pentesting labs.</p>
-      <a href="https://tryhackme.com/room-link" target="_blank">View Certificate</a>
-    </div>
+    
+
   </div>
 </section>
 <!-- Gallery Section -->
